@@ -1,7 +1,6 @@
 package com.grandp.data.security.controller;
 
 import java.security.Principal;
-import java.util.stream.Collectors;
 
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
@@ -11,6 +10,9 @@ import com.grandp.data.exception.notfound.entity.UserNotFoundException;
 import com.grandp.data.entity.user.User;
 import com.grandp.data.entity.user.UserService;
 import lombok.AllArgsConstructor;
+import org.springframework.security.authentication.AnonymousAuthenticationToken;
+import org.springframework.security.core.Authentication;
+import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.stereotype.Controller;
 import org.springframework.ui.Model;
 import org.springframework.web.bind.annotation.*;
@@ -39,6 +41,17 @@ public class AuthenticationController {
 //    }
 
 
+    @GetMapping("/login")
+    public String showLoginForm(Model model) {
+
+        Authentication authentication = SecurityContextHolder.getContext().getAuthentication();
+        if (authentication == null || authentication instanceof AnonymousAuthenticationToken) {
+            return "login";
+        }
+
+        return "redirect:/";
+    }
+
     //fixme remove from here
     @GetMapping("/profile")
     public String userProfile(Model model, Principal principal) throws UserNotFoundException {
@@ -52,9 +65,10 @@ public class AuthenticationController {
         model.addAttribute("loggedInUser", loggedInUser);
         model.addAttribute("roles", loggedInUser.getAuthorities().stream()
                 .map(SimpleAuthority::getAuthority)
-                .collect(Collectors.toList()));
+//                .collect(Collectors.toList()));
+                .toList());
 
-        logger.info("User '" + username + "' accessed profile page.");
+        logger.info(String.format("User '%s' accessed profile page.", username));
         return "profile";
     }
 }
